[package]
name = "slideshow"
version = "0.1.0"
authors = ["Henrique Perigo <hperigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "*"
glow = "*"
imgui-winit-support = "*"
imgui = "*"
memoffset = "*"

